--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
               <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
             </figure>
             <p><time>55 to 65 days</time>are need from germination to harvest of the root</p>
-            <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and venigar, or raw and shredded, either alone or combined with any salad vegetable
+            <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked
+                 vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either
+                   alone or combined with any salad vegetable
+            <p>In fact, <cite>Jim Halpert</cite> once said this about beets, "Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>"</p>
+            <p><blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets. -Chris Pratt</blockquote><p>
+
   </header>
 
   <main>
