added unordered list

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
   <!--All The HTML content goes in here -->
 
   <header>
+<article>
     <h1>Beetroot (<i>Beta vulgaris</i>)</h1>
     <nav>
       <ol>
         <li><a href="#">Common varieties</li></a>
         <li><a href="#">Nutritional information</li></a>
         <li><a href="#">Tags</li></a>
+      </ol>
+    </nav>
           <img src="images/beets.jpg" alt="">
             <figure>
               <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
@@ -25,8 +28,23 @@
                  vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either
                    alone or combined with any salad vegetable
             <p>In fact, <cite>Jim Halpert</cite> once said this about beets, "Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>"</p>
-            <p><blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets. -Chris Pratt</blockquote><p>
-
+            <p><blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets. <cite>-Chris Pratt</cite></blockquote><p>
+<h2>Common varieties</h2>
+  <ol>
+    <li>Albino</li>
+    <li>Bull's Blood</li>
+    <li>Chioggia</li>
+    <li>Detroit Dark Red</li>
+    <li>Early Wonder</li>
+  </ol>
+  <h2>Nutritional information</h2>
+  <p><dl><dt>Serving size:<dd>100g</dt></dd></dl>
+<ul>
+    <dl>
+      <dt>Energy:<dd>180KJ</dd></dt>
+      <dt>Carbohydrates:<dd>9.96 g</dd></dt>
+      <dt>Fat<dd>0.18 g</dd></dt>
+      <dt>Protein:<dd>1.68 g</dd></dt>
   </header>
 
   <main>
