fixed entities within figure

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <h1>Beetroot (<i>Beta vulgaris</i>)</h1>
     <nav>
       <ol>
-        <li><a href="#">Common varieties</li></a>
-        <li><a href="#">Nutritional information</li></a>
-        <li><a href="#">Tags</li></a>
+        <li><a href="#">Common varieties</a></li>
+        <li><a href="#">Nutritional information></a></li>
+        <li><a href="#">Tags></a></li>
       </ol>
     </nav>
           <img src="images/beets.jpg" alt="">
             <figure>
               <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
             </figure>
-            <p><time>55 to 65 days</time>are need from germination to harvest of the root</p>
+            <p>55 to 65 days are need from germination to harvest of the root</p>
             <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked
                  vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either
                    alone or combined with any salad vegetable
@@ -38,18 +38,24 @@
     <li>Early Wonder</li>
   </ol>
   <h2>Nutritional information</h2>
-  <p><dl><dt>Serving size:<dd>100g</dt></dd></dl>
-<ul>
-    <dl>
-      <dt>Energy:<dd>180KJ</dd></dt>
+  <p><dl><dt>Serving size:</dt><dd>100g</dd></dl>
+      <dl><dt>Energy</dt><dd>180KJ</dd></dt></dl>
       <dt>Carbohydrates:<dd>9.96 g</dd></dt>
       <dt>Fat<dd>0.18 g</dd></dt>
       <dt>Protein:<dd>1.68 g</dd></dt>
+      <h2>Tags</h2>
+      <ul>
+        <li>Crimson</li>
+        <li>Awesome</li>
+        <li>Pickle-able</li>
+        <li>Vegetable!</li>
+        <li>Delicious</li>
+      </ul>
   </header>
 
   <main>
 
-    <a href="https://www.wikipedia.org">Wikipedia</a>
+    <p>Source: <a href="https://www.wikipedia.org">Wikipedia</a>; Last modified:<time>Aug 30, 2014</time>
   </main>
 
 </body>
