Fixed validation errors

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <p>55 to 65 days are need from germination to harvest of the root</p>
             <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked
                  vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either
-                   alone or combined with any salad vegetable
+                   alone or combined with any salad vegetable</p>
             <p>In fact, <cite>Jim Halpert</cite> once said this about beets, "Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>"</p>
-            <p><blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets. <cite>-Chris Pratt</cite></blockquote><p>
+            <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets. <cite>-Chris Pratt</cite></blockquote>
 <h2>Common varieties</h2>
   <ol>
     <li>Albino</li>
@@ -38,11 +38,17 @@
     <li>Early Wonder</li>
   </ol>
   <h2>Nutritional information</h2>
-  <p><dl><dt>Serving size:</dt><dd>100g</dd></dl>
-      <dl><dt>Energy</dt><dd>180KJ</dd></dt></dl>
-      <dt>Carbohydrates:<dd>9.96 g</dd></dt>
-      <dt>Fat<dd>0.18 g</dd></dt>
-      <dt>Protein:<dd>1.68 g</dd></dt>
+  <dl><dt>Serving size:</dt><dd>100g</dd></dl>
+    <dl>
+      <dt>Energy:</dt>
+      <dd>180 kJ</dd>
+      <dt>Carbohydrates:</dt>
+      <dd>9.96 g</dd>
+      <dt>Fat:</dt>
+      <dd>0.18 g</dd>
+      <dt>Protein:</dt>
+      <dd>1.68 g</dd>
+    </dl>
       <h2>Tags</h2>
       <ul>
         <li>Crimson</li>
@@ -51,11 +57,13 @@
         <li>Vegetable!</li>
         <li>Delicious</li>
       </ul>
+    </article>
+
   </header>
 
   <main>
 
-    <p>Source: <a href="https://www.wikipedia.org">Wikipedia</a>; Last modified:<time>Aug 30, 2014</time>
+    <p>Source: <a href="https://www.wikipedia.org">Wikipedia</a>; Last modified:Aug 30, 2014</p>
   </main>
 
 </body>
