--- a/index.html
+++ b/index.html
@@ -10,45 +10,46 @@
   <!--All The HTML content goes in here -->
 
   <header>
-<article>
-    <h1>Beetroot (<i>Beta vulgaris</i>)</h1>
-    <nav>
+    <article>
+      <h1>Beetroot (<i>Beta vulgaris</i>)</h1>
+      <nav>
+        <ol>
+          <li><a href="#">Common varieties</a></li>
+          <li>,<a href="#">Nutritional information</a></li>
+          <li><a href="#">Tags</a></li>
+        </ol>
+      </nav>
+      <img src="images/beets.jpg" alt="">
+      <figure>
+        <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
+      </figure>
+      <p>55 to 65 days are need from germination to harvest of the root</p>
+      <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable</p>
+      <p>In fact, <cite>Jim Halpert</cite> once said this about beets, "Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>"</p>
+      <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets. <cite>-Chris Pratt</cite></blockquote>
+      <h2>Common varieties</h2>
       <ol>
-        <li><a href="#">Common varieties</a></li>
-        <li><a href="#">Nutritional information></a></li>
-        <li><a href="#">Tags></a></li>
+        <li>Albino</li>
+        <li>Bull's Blood</li>
+        <li>Chioggia</li>
+        <li>Detroit Dark Red</li>
+        <li>Early Wonder</li>
       </ol>
-    </nav>
-          <img src="images/beets.jpg" alt="">
-            <figure>
-              <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
-            </figure>
-            <p>55 to 65 days are need from germination to harvest of the root</p>
-            <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked
-                 vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either
-                   alone or combined with any salad vegetable</p>
-            <p>In fact, <cite>Jim Halpert</cite> once said this about beets, "Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>"</p>
-            <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets. <cite>-Chris Pratt</cite></blockquote>
-<h2>Common varieties</h2>
-  <ol>
-    <li>Albino</li>
-    <li>Bull's Blood</li>
-    <li>Chioggia</li>
-    <li>Detroit Dark Red</li>
-    <li>Early Wonder</li>
-  </ol>
-  <h2>Nutritional information</h2>
-  <dl><dt>Serving size:</dt><dd>100g</dd></dl>
-    <dl>
-      <dt>Energy:</dt>
-      <dd>180 kJ</dd>
-      <dt>Carbohydrates:</dt>
-      <dd>9.96 g</dd>
-      <dt>Fat:</dt>
-      <dd>0.18 g</dd>
-      <dt>Protein:</dt>
-      <dd>1.68 g</dd>
-    </dl>
+      <h2>Nutritional information</h2>
+      <dl>
+        <dt>Serving size:</dt>
+        <dd>100g</dd>
+      </dl>
+      <dl>
+        <dt>Energy:</dt>
+        <dd>180 kJ</dd>
+        <dt>Carbohydrates:</dt>
+        <dd>9.96 g</dd>
+        <dt>Fat:</dt>
+        <dd>0.18 g</dd>
+        <dt>Protein:</dt>
+        <dd>1.68 g</dd>
+      </dl>
       <h2>Tags</h2>
       <ul>
         <li>Crimson</li>
